# RFQ_Gen

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/rfq_gen/: base_logger.py  main.py
src/rfq_gen/app/: controller.py  excel_parser.py
src/rfq_gen/app/gui/: cust_buyer_selection_gui.py  main_window.py  utils.py
src/rfq_gen/mie_trak_api/: bom.py  department.py  item.py  party.py  quote.py  request_for_quote.py  router.py  user.py  utils.py
src/rfq_gen/src/: controller.py  excel_parser.py
src/rfq_gen/src/gui/: cust_buyer_selection_gui.py  main_window.py  utils.py
tests/: test_excel_parser.py
