[project]
name = "rfq-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Siddharth Vyas",email = "sidd.vyass@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0,<3.14"
dependencies = [
    "pyodbc (>=5.2.0,<6.0.0)",
    "tkcalendar (>=1.6.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "rfq_gen", from = "src"}]
package-mode = false


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.3.5"
coverage = "^7.7.0"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
